@@ -6,11 +6,12 @@
 
  Requirements:
  --------------
- To run and use domus.Link you need the following:
+ To run and use domus.Link V1.2+ you need the following:
  
- - Heyu
- - Apache or any other webserver
- - PHP support
+ These have been tested -
+ - Heyu 2.8.0
+ - Apache 2.2+ (2.0+ may work if PHP5 is installed. Not Tested)
+ - PHP5+ support
  
  
  Assumptions:
@@ -60,6 +61,15 @@
     
  7) Finally, point your web browser to your webserver (ie: http://localhost/domus.Link)
     and start heyu using the 'START' link located on the footer.
+
+    If you are upgrading from a previous version of domus.Link prior to V1.2, you will be
+    asked to convert your alias and floorplan to the new version. Click 'Convert' to
+    accomplish this.
+    If you click 'Continue', you will bypass the conversion and all aliases will be of type
+    'other' and in location 'unknown'. While this action will not change your mapping, if you
+    make a modification to the heyu config file in the admin area or update an alias, you will
+    not be asked again for the convert. If you do not do anything and then start another session
+    later, you will be asked for the conversion again.
 
 
  ------------------------------------------------------------------------
