@@ -28,7 +28,22 @@
   php.ini file and make sure 'open_basedir' is disabled or that the 
   /etc/heyu directory is included.
   
+  4) When veiwing the home screen, all of my modules show in the 'unknown' location.
+  You have a new instance of domus.Link and will need to assign the aliases to a
+  loaction in the admin/alias screen. This is done by editing an alias and in the location
+  drop down, typing in a new location as this field is editable.
+  
+  5) Error in saving config file, file has been modified.
+  This occurs when another user or a manual edit has occured on a config filewhen you have
+  tried to save a modification. In most instances the changes will be detected before
+  this happens. If it does happen, exit your browser completely and try again.
 
+  6) Parse error: syntax error, unexpected T_OBJECT_OPERATOR in.....
+  Domus.Link now requires PHP5+ as we use the php object model with multiple object operator
+  redirection. This is not supported in the PHP4 object model. Please upgrade to PHP5.
+  
+  7) Path to favicon.ico not found.
+  Domus.Link now requires PHP5+.
   -------
   License
   -------
